# qtubnutu-media-signals

./: CMakeLists.txt  libqtubuntu_media_signals.pc.in
debian/: changelog  control  copyright  libqtubuntu-media-signals-dev.install  libqtubuntu-media-signals1.install  rules
src/: qtubuntu_media_signals.cpp  qtubuntu_media_signals.h
